fixed flow shift when hovering achievement card

--- a/src/styles/sections/achievements.scss
+++ b/src/styles/sections/achievements.scss
@@ -17,7 +17,7 @@
     border-radius: 14px;
 
     &:hover {
-        border-width: 0px;
+        border-color: transparent;
         box-shadow: 0px 26px 49px 0px #92A5B855;
     }
 
